--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nft-indexer",
+  "name": "erc20-indexer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,16 +10,21 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.6",
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "@tanstack/react-query": "^5.59.19",
     "alchemy-sdk": "^2.2.5",
-    "axios": "^1.2.2",
+    "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viem": "^2.21.40",
+    "wagmi": "^2.12.25"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-commonjs": "^0.10.3"
   }
 }
